ncc/testsuite/negative/return-type.n
class M {
  static g () : string { 3 }    // E: expected string.*, got int in function return type
  static h () : void { ().x = 4 }    // E: there is no member named `x' in void
}
class A { public this () {} }

class B {
  f1 () : void { null } // E: expected void.* function return type.*null

  static f ['a] (_ : 'a) : 'a where 'a : A { A() }        // E: expected 'a.*, got A in function return type
}

class X {
  static f () : void { 
    def g () : int { () }; // E: expected int.*, got void in function return type
    def h () : int {  }; // E: expected int.*, got void in function return type
    def _ = g () + h ();
    () 
  }
}


module NullToTuple {
  goo () : int * int { // expected .* the `null' literal is not a valid value of type
    null
  }
  
  Main () : void {
    def _ = goo ();
    ()
  }
}
